<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname" />
    <EditText
        android:id="@+id/group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/group"
        android:inputType="number" />
    <EditText
        android:id="@+id/faculty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/faculty" />

    <EditText
        android:id="@+id/w_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/f_write" />
    <EditText
        android:id="@+id/r_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/f_read" />

    <Button
        android:id="@+id/b_write"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:layout_marginTop="10dp"
        android:text="@string/write" />

    <Button
        android:id="@+id/b_read"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:layout_marginTop="10dp"
        android:text="@string/read" />

    <TextView
        android:id="@+id/tv_text"
        android:text=""
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
